ubiquity (1.7.5) UNRELEASED; urgency=low

  [ Evan Dandrea ]
  * Add accessibility support to 'only-ubiquity'.
  * Move noninteractive frontend to a purely gobject-based event loop
    (LP: #149477).
  * Noninteractive mode now implies --automatic (LP: #149473).

  [ Mario Limonciello ]
  * Add proper theme support to mythbuntu FE.

  [ Colin Watson ]
  * Update console-setup component for layout and variant changes in
    console-setup 1.21ubuntu1.
  * Run fontconfig-voodoo with --force.
  * Call 'fontconfig-voodoo --auto --force --quiet' when the language is
    changed. May help with LP #185269.

 -- Evan Dandrea <evand@ubuntu.com>  Mon, 28 Jan 2008 16:20:33 -0500

ubiquity (1.7.4) hardy; urgency=low

  [ Mario Limonciello ]
  * debian/control:
    - add mythbuntu-common to depends.
  * Modify lirc handling to use mythbuntu-common.

  [ Colin Watson ]
  * Simplify check for gconftool-2 being on $PATH.

  [ Evan Dandrea ]
  * Changed the system partition unformatted check to a warning, in support of
    ubiquity-preserve-home.
  * Automatic update of included source packages: grub-installer
    1.27ubuntu2, partman-auto-loop 0ubuntu13, partman-basicfilesystems
    56ubuntu2, partman-ext3 49ubuntu1, partman-target 52ubuntu2.

 -- Evan Dandrea <evand@ubuntu.com>  Wed, 23 Jan 2008 16:29:56 +0000

ubiquity (1.7.3) hardy; urgency=low

  [ Mario Limonciello ]
  * Show correct image in ubiquity-mythbuntu.desktop.
  * Check only for .desktop file in autostart on mythbuntu.
  * Revamp scripts/mythbuntu/mythbuntu-setup to be more restrictive
    upon xhost authentication, and remove dbus reliance.

  [ Colin Watson ]
  * udev 117 merged all udev tools into a single binary called udevadm.
    Check for this and use it instead of udevinfo if available.

  [ Evan Dandrea ]
  * Properly handle situations where localechooser might ask
    languagechooser/language-name-* (LP: #181440).
  * Correctly answer both countrychooser/shortlist and