@@ -5,6 +5,8 @@ ubiquity (1.7.5) UNRELEASED; urgency=low
   * Move noninteractive frontend to a purely gobject-based event loop
     (LP: #149477).
   * Noninteractive mode now implies --automatic (LP: #149473).
+  * Add new nautilus gconf keys to the list we temporarily disable to
+    prevent constant pop-ups.
 
   [ Mario Limonciello ]
   * Add proper theme support to mythbuntu FE.
@@ -16,7 +18,7 @@ ubiquity (1.7.5) UNRELEASED; urgency=low
   * Call 'fontconfig-voodoo --auto --force --quiet' when the language is
     changed. May help with LP #185269.
 
- -- Evan Dandrea <evand@ubuntu.com>  Mon, 28 Jan 2008 16:20:33 -0500
+ -- Evan Dandrea <evand@ubuntu.com>  Tue, 29 Jan 2008 17:10:48 -0500
 
 ubiquity (1.7.4) hardy; urgency=low
 
